[tool.poetry]
name = "brawldogg"
version = "0.1.0"
description = "Asynchronous Brawl Stars API Wrapper"
readme = "README.md"

packages = [
    { include = "brawldogg" }
]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.28.1"
pydantic = "^2.12.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
